--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.50.1",
     "react-image-crop": "^11.0.5",
     "react-toastify": "^10.0.4",
+    "sweetalert2": "^11.10.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3",
