--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-image-crop": "^11.0.5",
+    "react-social-share-rak": "^1.0.4",
     "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.6",
     "tailwind-merge": "^2.2.1",
