--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
         "sendgrid/sendgrid": "^8.1"
     },
     "require-dev": {
