--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@hookform/resolvers": "^3.3.4",
     "@preact/signals": "^1.2.2",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-image-crop": "^11.0.5",
+    "react-intersection-observer": "^9.10.3",
     "react-social-share-rak": "^1.0.4",
     "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.6",
