--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-social-share-rak": "^1.0.4",
     "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.6",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3",
